--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,10 @@ services:
     environment:
       - cluster.name=docker-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"
+      - "http.host=0.0.0.0"
+      - "transport.host=127.0.0.1"
       - "discovery.zen.ping.unicast.hosts=elasticsearch"
     ulimits:
       memlock:
