fix permissions error after getting up docker
Also removes Windows hack (Who cares Windows?)

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
 # Magento document root source project
 MAGENTO_ROOT=~/workspace/magento2/src
+PROJECT_ROOT=/var/www/html/src
 
 # Mysql (or mariadb) config
 MYSQL_ROOT_PASSWORD=magento
