Use the 'pub' folder as the Magento system's root.
This is a modern PHP framework convention.
Protects your PHP and configuration files from being accidentally exposed to the world.

More info: https://alanstorm.com/magento-2-the-pub-folder/

--- a/web/apache-conf/local-m2.conf
+++ b/web/apache-conf/local-m2.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-        DocumentRoot "/var/www/html/src"
+        DocumentRoot "/var/www/html/src/pub"
         ServerName app.local
 
         LogLevel warn
